2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py:
	* src/lib/accerciser/plugin_manager.py: Added accelerators for
	quick plugin tab switching (bug 417424).

2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Added mnemonics to expanders 
	(bug 417421).

2007-03-13  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: Fixed a syntax error.

2007-03-12  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: Added links in event logs to show
	accessible in tree (bug 417526).
	
2007-03-12  Peter Parente  <parente@cs.unc.edu>

	* src/lib/accerciser/accessible_treeview.py: Fixed bug #414915, also
	added _buildRow convenience method for constructing new rows without
	awareness of the current order of data fields in the model

2007-03-07  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Labeled value interface spinner
	(bug 414909).

2007-03-07  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: Made all informative labels
	selectable (bug 414911).

2007-03-07  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: added "label-for" and
	"labelled-by" accessible relations where appropriate (bug 414914).

2007-03-07  Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py: 
	* plugins/console.py: Show appropriate error dialog when IPython
	is not installed. And eliminate the need for running ipython from
	a shell for the first time.
	* src/lib/accerciser/accerciser.py: Fixed bug 415810.

2007-03-07  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/plugin.py: Added an __eq__ method to the
	method wrapper class.

2007-03-07  Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py:
	* plugins/console.py:
	* plugins/event_monitor.py:
	* plugins/interface_view.py:
	* src/lib/accerciser/plugin.py: Added error messages to plugin
	tabs when something goes wrong (bug 412249).